# gaebet

./: bookmaker.py  commands.py  main.py  pyproject.toml  rendering.py  userfunct.py  utils.py  wake.py
static/: handlers.js
static/beta/: handlers.js
templates/: alert.html  bets.html  board.html  book.html  index.html  nav-bar.html  notifications.html  profile.html  unauthorized.html
templates/beta/: bets.html  board.html  index.html  nav-bar.html  notifications.html  profile.html
templates/beta/video/: twitch.html
