[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_gaebet"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.1.0"
flask = "^2.0.1"
flask-discord = "^0.1.64"
flask-bootstrap = "^3.3.7"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]